--- a/tomcat7/Dockerfile
+++ b/tomcat7/Dockerfile
@@ -22,5 +22,7 @@ ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en  
 ENV LC_ALL en_US.UTF-8  
 
+VOLUME /deployment
+
 ENTRYPOINT ["/opt/start-tomcat.sh"]
 
