--- a/unite/docker-compose.yml
+++ b/unite/docker-compose.yml
@@ -1,7 +1,7 @@
 data:
   build: data
   volumes:
-   - "/tomcat"
+   - /tomcat
 tomcat7:
   image: codenvy/jdk7_tomcat7
   volumes_from:
@@ -16,10 +16,13 @@ tomcat7:
    - "8888:8080"
 mysql:
   image: mysql:5.6
+  volumes_from:
+    - data
   expose:
     - "3306"
   links:
     - data
   environment:
     - MYSQL_ROOT_PASSWORD=password
+    - MYSQL_HOME=/mysql
 
