--- a/unite/data/Dockerfile
+++ b/unite/data/Dockerfile
@@ -6,7 +6,7 @@ ADD ./tomcat /tomcat
 ADD ./mysql /mysql
 
 RUN mkdir -p /tomcat && chmod -R 777 /tomcat && chown -R 1000:1000 /tomcat
-RUN mkdir -p /mysql && chmod -R 777 /mysql && chown -R 1000:1000 /mysql
+RUN mkdir -p /mysql/data && chmod -R 700 /mysql && chmod -R 777 /mysql/data && chown -R 1000:1000 /mysql
 
 VOLUME ["/tomcat","/configuration","/mysql"]
 
