--- a/unite/docker-compose.yml
+++ b/unite/docker-compose.yml
@@ -18,6 +18,8 @@ unitedb:
   image: mysql:5.6
   expose:
     - "3306"
+  ports:
+    - "1337:3306"
   environment:
     - MYSQL_ROOT_PASSWORD=password
     - MYSQL_DATABASE=unite
