Created missing dirs. Moved README file. Fixed templates to use tagged containers for resolving IP/PORT

--- a/images/tomcat/consul.conf
+++ b/images/tomcat/consul.conf
@@ -1,4 +1,4 @@
-consul = "192.168.59.103:8500"
+consul = "10.0.0.204:8500"
 
 template {
   source = "/home/user/consul/scq.ctmpl"
@@ -11,5 +11,5 @@ template {
 template {
   source = "/home/user/consul/chq.ctmpl"
   destination  = "/home/user/unite/conf/Catalina/localhost/chq.xml"
-  command = "/home/user/tomcat7/bin/catalina.sh stop && /home/user/tomcat7/catalina.sh start"
+  command = "/home/user/tomcat7/bin/catalina.sh run 2>&1"
 }
