Configured mysql stuff

--- a/data/mysql/my.cnf
+++ b/data/mysql/my.cnf
@@ -1,4 +1,6 @@
 [mysqld]
+bind-address=0.0.0.0
+skip_name_resolve
 lower_case_table_names=1
-lower-case-table-names=1
-
+max_allowed_packet = 64M
+wait_timeout = 6000
