--- a/images/nginx/consul.conf
+++ b/images/nginx/consul.conf
@@ -2,6 +2,6 @@ consul = "10.0.0.204:8500"
 
 template {
   source = "/home/user/consul/unite.ctmpl"
-  destination  = "/etc/nginx/sites-enabled/000default"
+  destination  = "/etc/nginx/conf.d/default.conf"
   command = "nginx -g daemon off;"
 }
