--- a/data/nginx/ibanx.conf
+++ b/data/nginx/ibanx.conf
@@ -1,5 +1,5 @@
 upstream tomcat  {
-      server jdk7_tomcat7.dev.docker:8080; #Tomcat
+      server tomcat:8080; #Tomcat
 }
  
 upstream uniteapi  {
