--- a/consul/consul/nginx/consul.conf
+++ b/consul/consul/nginx/consul.conf
@@ -1,7 +1,7 @@
 consul = "10.0.0.204:8500"
 
 template {
-  source = "/home/user/consul/unite.ctmpl"
+  source = "/consul/nginx/unite.ctmpl"
   destination  = "/etc/nginx/conf.d/default.conf"
-  command = "nginx -g daemon off;"
+  command = "nginx"
 }
