--- a/consul/consul/tomcat/consul.conf
+++ b/consul/consul/tomcat/consul.conf
@@ -1,15 +1,15 @@
 consul = "10.0.0.204:8500"
 
 template {
-  source = "/home/user/consul/scq.ctmpl"
+  source = "/consul/tomcat/scq.ctmpl"
   destination  = "/tomcat/conf/Catalina/localhost/scq.xml"
 }
 template {
-  source = "/home/user/consul/pcq.ctmpl"
+  source = "/consul/tomcat/pcq.ctmpl"
   destination  = "/tomcat/conf/Catalina/localhost/pcq.xml"
 }
 template {
-  source = "/home/user/consul/chq.ctmpl"
+  source = "/consul/tomcat/chq.ctmpl"
   destination  = "/tomcat/conf/Catalina/localhost/chq.xml"
   command = "/home/user/tomcat7/bin/catalina.sh run 2>&1"
 }
