Run consul in daemon mode to dynamically connect to nginx when it's available

--- a/consul/consul/tomcat/consul.conf
+++ b/consul/consul/tomcat/consul.conf
@@ -11,5 +11,5 @@ template {
 template {
   source = "/consul/tomcat/chq.ctmpl"
   destination  = "/tomcat/conf/Catalina/localhost/chq.xml"
-  command = "/home/user/tomcat7/bin/catalina.sh run 2>&1"
+  command = "/home/user/tomcat7/bin/catalina.sh stop; /home/user/tomcat7/bin/catalina.sh run 2>&1"
 }
