--- a/consul/consul/nginx/consul.conf
+++ b/consul/consul/nginx/consul.conf
@@ -3,5 +3,5 @@ consul = "10.0.0.204:8500"
 template {
   source = "/consul/nginx/unite.ctmpl"
   destination  = "/etc/nginx/conf.d/default.conf"
-  command = "nginx"
+  command = "nginx; nginx -s reload"
 }
